Правки, разбивка методов, обработчики ошибок